# RAG_Researcher

./: README.md  pyproject.toml  pyproject.toml~
sandbox/: feed_parser.py
src/RAG_researcher/core/: rag_app.py  rag_app_clone.py
src/RAG_researcher/rag-ui/: package-lock.json  package.json  start_rag.sh
src/RAG_researcher/rag-ui/src/app/: page.tsx
src/RAG_researcher/routes/: chat.py  configure_llm.py  configure_subject.py
src/RAG_researcher/utils/: globals.py  helpers.py  logger.py
